--- a/Dockerfile_nginx+php8.1-fpm
+++ b/Dockerfile_nginx+php8.1-fpm
@@ -1,6 +1,3 @@
-docker build -t my-nginx-php8.1 .
-docker run -p 80:80 -d my-nginx-php8.1
-
 FROM ubuntu:latest
 
 ENV TZ=Europe/Moscow \
@@ -24,14 +21,11 @@ RUN apt update && apt install -y \
     php-common \
     php-zip
 
+COPY ./nginx.conf /etc/nginx/conf.d/
+COPY ./php.ini /etc/php/8.1/fpm/conf.d/php.ini
+
 RUN service php8.1-fpm restart && \
     service nginx restart
-
-COPY nginx.conf /etc/nginx/conf.d/
-
-COPY html /var/www/html
-
-WORKDIR /var/www/html
 
 EXPOSE 80
 
