--- a/Dockerfile_apche+php-fpm
+++ b/Dockerfile_apche+php-fpm
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 ENV TZ=Europe/Moscow \
     DEBIAN_FRONTEND=noninteractive
 
-RUN apt update && apt install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     tzdata \
     apache2 \
     php-fpm \
@@ -16,19 +16,11 @@ RUN apt update && apt install -y \
     php-xmlrpc \
     php-soap \
     php-intl \
-    php-zip
-
-RUN a2enmod proxy_fcgi && \
-    a2enconf php8.1-fpm && \
-    a2enmod actions && \
-    a2enmod rewrite && \
-    a2enmod proxy_fcgi && \
-    a2enmod setenvif && \
-    a2dismod mpm_prefork && \
-    a2dismod mpm_worker && \
+    php-zip && \
+    a2enmod proxy_fcgi actions rewrite setenvif && \
     a2enmod mpm_event && \
-    service php8.1-fpm restart && \
-    service apache2 restart
+    a2dismod mpm_prefork mpm_worker && \
+    rm -rf /var/lib/apt/lists/*
 
 EXPOSE 80
 
